--- a/dockcer_excel_parcing/Dockerfile
+++ b/dockcer_excel_parcing/Dockerfile
@@ -1,14 +1,28 @@
 FROM python:3.10
+# Install required packages for Chrome
+# Install necessary dependencies for Chrome
+RUN apt-get update && apt-get install -y \
+    wget \
+    gnupg2 \
+    libxss1 \
+    libappindicator3-1 \
+    libatk-bridge2.0-0 \
+    libgtk-3-0 \
+    libnspr4 \
+    libnss3 \
+    xdg-utils \
+    --no-install-recommends \
+    && wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - \
+    && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
+    && apt-get update \
+    && apt-get install -y google-chrome-stable \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 COPY . /app
 
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
-
-RUN apt-get update && apt-get install -y wget unzip && \
-    wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && \
-    rm google-chrome-stable_current_amd64.deb && \
-    apt-get clean
 
 CMD ["python", "main.py"]
